tomcat webservice READ.ME